# The-Aftermath

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TheAftermath.sln
Source/: AObject.cpp  AObject.h  CMakeLists.txt  Graphics.cpp  Graphics.h  Main.cpp  Scene.cpp  Scene.h  Utility.cpp  Utility.h  Vertex.h  d3dx12.h
Source/Shader/: GBufferPS.hlsl  GBufferVS.hlsl  OutputPS.hlsl  OutputVS.hlsl
TheAftermath/: AObject.h  CommandBuffer.cpp  CommandBuffer.h  Device.cpp  Device.h  GameWindow.cpp  GameWindow.h  Graphics.cpp  Graphics.h  Main.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TheAftermath.vcxproj  TheAftermath.vcxproj.filters  Vertex.h  _internal.h  packages.config
TheAftermath/Context/: Context.cpp  Context.h
TheAftermath/Graphics/: Graphics.cpp  Graphics.h
TheAftermath/Model/Box/: Box.json
TheAftermath/Runtime/: AModel.h  AObject.h  Camera.cpp  Camera.h  ModernScene.cpp  Scene.cpp  Scene.h
TheAftermath/Shader/: GBufferPS.hlsl  GBufferVS.hlsl  OutputPS.hlsl  OutputVS.hlsl  ScenePS.hlsl  SceneVS.hlsl  gbuffer.def.sc  gbuffer_fs.sc  gbuffer_vs.bin.d  gbuffer_vs.sc
TheAftermath/Shader/gbuffer/: gbuffer.def.sc  gbuffer_fs.sc  varying.def.sc
TheAftermath/TextureLoader/: DDSTextureLoader12.cpp  WICTextureLoader12.cpp
TheAftermath/Utility/: Json.cpp  Json.h  Utility.cpp  Utility.h
TheAftermath/Window/: RenderWindow.cpp  RenderWindow.h
source/: AABB.h  CMakeLists.txt  Device.cpp  Device.h  GameRenderer.h  GameScene.cpp  GameScene.h  Mesh.h  TheAftermath.cpp
tool/bake_model/: BakeModel.cpp  CMakeLists.txt
